add resposive styles

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header class="header">
         <div class="container header__main">
-            <a class="header__logo" href="#"><img class="header__logo-img" src="./img/Logo.png"></a>
+            <a class="header__logo" href="#"><img class="header__logo-img" src="./img/Logo.png" /></a>
             <nav class="header__nav">
                 <ul class="header__menu">
                     <li class="header__menu-item"><a class="header__menu-link" href="#">Home</a></li>
@@ -23,5 +23,9 @@
             <button class="header__login"><i class="fa fa-user header__login-icon" aria-hidden="true"></i> Login</button>
         </div>
     </header>
+        <section class="banner">
+            <h1 class="banner__main">Welcome to pink</h1>
+            <p class="banner__text">A multi purpose theme from cssauthor.com</p>
+        </section>
 </body>
 </html>
