add html for banner content and categories

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Pink Layout</title>
 </head>
 <body>
+    <img class="bg-pink" src="./img/bg-header.png" alt="" />
     <header class="header">
         <div class="container header__main">
             <a class="header__logo" href="#"><img class="header__logo-img" src="./img/Logo.png" /></a>
@@ -27,5 +28,37 @@
             <h1 class="banner__main">Welcome to pink</h1>
             <p class="banner__text">A multi purpose theme from cssauthor.com</p>
         </section>
+        <main class="content container">
+            <section class="banner-content">
+                <h1 class="banner-content__main">Lorem, ipsum is dummy</h1>
+                <p class="banner-content__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem possimus illo cupiditate.</p>
+            </section>
+            <section class="categories">
+                <nav>
+                    <ul>
+                        <li><a href="#"><img src="./img/tickets.png" alt="">
+                            <i>Tickets</i>
+                            <span>Lorem, ipsum.</span>
+                        </a>
+                    </li>
+                        <li><a href="#"><img src="./img/foto.png" alt="">
+                            <i>Camera</i>
+                            <span>Lorem, ipsum dolor.</span>
+                        </a>
+                    </li>
+                        <li><a href="#"><img src="./img/beermug.png" alt="">
+                            <i>Beer</i>
+                            <span>Lorem ipsum dolor sit.</span>
+                        </a>
+                    </li>
+                        <li><a href="#"><img src="./img/ipod.png" alt="">
+                            <i>Devices</i>
+                            <span>Lorem ipsum dolor sit amet.</span>
+                        </a>
+                    </li>
+                    </ul>
+                </nav>
+            </section>
+        </main>
 </body>
 </html>
