--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style css/style.css">
+    <link rel="stylesheet" href="media.css">
     <link rel="stylesheet" href="libs/font-awesome-4.7.0/css/font-awesome.min.css">
     <title>Pink Layout</title>
 </head>
@@ -28,37 +29,67 @@
             <h1 class="banner__main">Welcome to pink</h1>
             <p class="banner__text">A multi purpose theme from cssauthor.com</p>
         </section>
+
         <main class="content container">
             <section class="banner-content">
                 <h1 class="banner-content__main">Lorem, ipsum is dummy</h1>
-                <p class="banner-content__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem possimus illo cupiditate.</p>
+                <p class="banner-content__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem possimus illo cupiditate.Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem possimus illo cupiditate.</p>
             </section>
+
             <section class="categories">
                 <nav>
-                    <ul>
-                        <li><a href="#"><img src="./img/tickets.png" alt="">
-                            <i>Tickets</i>
-                            <span>Lorem, ipsum.</span>
+                    <ul class="categories__nav">
+                        <li><a class="categories__link categories__link_bg_blue" href="#">
+                                <img class="categories__img" src="./img/tickets.png" alt="">
+                                    <span class="categories__title">Tickets</span>
+                                        <span class="categories__desk">Lorem, ipsum.Lorem, ipsum.Lorem, ipsum.Lorem, ipsum.Lorem, ipsum.Lorem, ipsum.Lorem, ipsum.Lorem,</span>
                         </a>
                     </li>
-                        <li><a href="#"><img src="./img/foto.png" alt="">
-                            <i>Camera</i>
-                            <span>Lorem, ipsum dolor.</span>
-                        </a>
-                    </li>
-                        <li><a href="#"><img src="./img/beermug.png" alt="">
-                            <i>Beer</i>
-                            <span>Lorem ipsum dolor sit.</span>
-                        </a>
-                    </li>
-                        <li><a href="#"><img src="./img/ipod.png" alt="">
-                            <i>Devices</i>
-                            <span>Lorem ipsum dolor sit amet.</span>
-                        </a>
-                    </li>
+                    <li><a class="categories__link categories__link_bg_green" href="#">
+                        <img class="categories__img" src="./img/foto.png" alt="">
+                            <span class="categories__title">Camera</span>
+                                <span class="categories__desk">Lorem, ipsum.Lorem, ipsum.Lorem, ipsum.Lorem, ipsum.Lorem, ipsum.Lorem, ipsum.Lorem, ipsum.Lorem, </span>
+                </a>
+            </li>
+            <li><a class="categories__link categories__link_bg_red" href="#">
+                <img class="categories__img" src="./img/beermug.png" alt="">
+                    <span class="categories__title">Beer</span>
+                        <span class="categories__desk">Lorem, ipsum.Lorem, ipsum.Lorem, ipsum.Lorem, ipsum.Lorem, ipsum.Lorem, ipsum.Lorem,</span>
+        </a>
+    </li>
+    <li><a class="categories__link categories__link_bg_brown" href="#">
+        <img class="categories__img" src="./img/ipod.png" alt="">
+            <span class="categories__title">Devices</span>
+                <span class="categories__desk">Lorem, ipsum.Lorem, ipsum.Lorem, ipsum.Lorem, ipsum.Lorem, ipsum.Lorem, ipsum.Lorem, ipsum.Lorem,</span>
+</a>
+</li>
                     </ul>
                 </nav>
             </section>
+
+                <div class="articles">
+                <section class="article">
+                    <img class="article__img" src="/img/article.png" alt="" />
+                    <div class="article__block">
+                    <h1 class="article__main">Lorem, ipsum is dummy</h1>
+                <p class="article__desk">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem possimus illo cupiditate.Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem possimus illo cupiditate.Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem possimus illo cupiditate.</p>
+                    </div>
+                </section>
+                <section class="article">
+                    <img class="article__img" src="/img/article.png" alt="" />
+                    <div class="article__block">
+                    <h1 class="article__main">Lorem, ipsum is dummy</h1>
+                <p class="article__desk">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem possimus illo cupiditate.Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem possimus illo cupiditate.Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem possimus illo cupiditate.</p>
+                    </div>
+                </section>
+                <section class="article">
+                    <img class="article__img" src="/img/article.png" alt="" />
+                    <div class="article__block">
+                    <h1 class="article__main">Lorem, ipsum is dummy</h1>
+                <p class="article__desk">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem possimus illo cupiditate.Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem possimus illo cupiditate.Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem possimus illo cupiditate.</p>
+                    </div>
+                </section>
+            </div>
         </main>
-</body>
+    </body>
 </html>
