add footer html

--- a/index.html
+++ b/index.html
@@ -91,5 +91,81 @@
                 </section>
             </div>
         </main>
+
+        <footer class="bg-footer">
+            <div class="footer container">
+                <div class="footer__menu-wrap">
+                    <h2 class="footer__main">Sub Menu</h2>
+                <ul class="footer__menu">
+                    <li class="footer__item"><a class="footer__link" href="#">Android</a></li>
+                    <li class="footer__item"><a class="footer__link" href="#">Apps</a></li>
+                    <li class="footer__item"><a class="footer__link" href="#">Articles</a></li>
+                    <li class="footer__item"><a class="footer__link" href="#">Backgrounds</a></li>
+                    <li class="footer__item"><a class="footer__link" href="#">Bloggers</a></li>
+                    <li class="footer__item"><a class="footer__link" href="#">Books</a></li>
+                    <li class="footer__item"><a class="footer__link" href="#">Cooding</a></li>
+                </ul>
+                    </div>
+
+                    <div class="footer__menu-wrap">
+                        <h2 class="footer__main">Sub Menu</h2>
+                    <ul class="footer__menu">
+                        <li class="footer__item"><a class="footer__link" href="#">Android</a></li>
+                        <li class="footer__item"><a class="footer__link" href="#">Apps</a></li>
+                        <li class="footer__item"><a class="footer__link" href="#">Articles</a></li>
+                        <li class="footer__item"><a class="footer__link" href="#">Backgrounds</a></li>
+                        <li class="footer__item"><a class="footer__link" href="#">Bloggers</a></li>
+                        <li class="footer__item"><a class="footer__link" href="#">Books</a></li>
+                        <li class="footer__item"><a class="footer__link" href="#">Cooding</a></li>
+                    </ul>
+                        </div>
+
+                        <div class="footer__menu-wrap">
+                            <h2 class="footer__main">Sub Menu</h2>
+                        <ul class="footer__menu">
+                            <li class="footer__item"><a class="footer__link" href="#">Android</a></li>
+                            <li class="footer__item"><a class="footer__link" href="#">Apps</a></li>
+                            <li class="footer__item"><a class="footer__link" href="#">Articles</a></li>
+                            <li class="footer__item"><a class="footer__link" href="#">Backgrounds</a></li>
+                            <li class="footer__item"><a class="footer__link" href="#">Bloggers</a></li>
+                            <li class="footer__item"><a class="footer__link" href="#">Books</a></li>
+                            <li class="footer__item"><a class="footer__link" href="#">Cooding</a></li>
+                        </ul>
+                            </div>
+
+                            <div class="footer__menu-wrap">
+                                <h2 class="footer__main">Sub Menu</h2>
+                            <ul class="footer__menu">
+                                <li class="footer__item"><a class="footer__link" href="#">JQuery</a></li>
+                                <li class="footer__item"><a class="footer__link" href="#">Magento</a></li>
+                                <li class="footer__item"><a class="footer__link" href="#">Mobile</a></li>
+                                <li class="footer__item"><a class="footer__link" href="#">Photoshop</a></li>
+                                <li class="footer__item"><a class="footer__link" href="#">Plugins</a></li>
+                                <li class="footer__item"><a class="footer__link" href="#">Resource</a></li>
+                                <li class="footer__item"><a class="footer__link" href="#">Templates</a></li>
+                            </ul>
+                                </div>
+
+                <div class="footer__social-menu">
+                    <a class="footer__social-link" href="#">
+                        <i class="footer__social-icon fa fa-facebook" aria-hidden="true">
+                        </i>
+                    </a>
+                    <a class="footer__social-link" href="#">
+                        <i class="footer__social-icon fa fa-twitter" aria-hidden="true">
+                        </i>
+                    </a>
+                    <a class="footer__social-link" href="#">
+                        <i class="footer__social-icon fa fa-dribbble" aria-hidden="true">
+                        </i>
+                    </a>
+                    <a class="footer__social-link" href="#">
+                        <i class="footer__social-icon fa fa-share-alt" aria-hidden="true">
+                        </i>
+                    </a>
+                    <a class="footer__copyright" href="#">Copyright &#169 2020-2022 Cssauthor.com</a>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
