add footer styles

--- a/index.html
+++ b/index.html
@@ -146,7 +146,8 @@
                             </ul>
                                 </div>
 
-                <div class="footer__social-menu">
+                <div class="footer__social-wrap">
+                    <div class="footer__social-menu">
                     <a class="footer__social-link" href="#">
                         <i class="footer__social-icon fa fa-facebook" aria-hidden="true">
                         </i>
@@ -163,6 +164,7 @@
                         <i class="footer__social-icon fa fa-share-alt" aria-hidden="true">
                         </i>
                     </a>
+                </div>
                     <a class="footer__copyright" href="#">Copyright &#169 2020-2022 Cssauthor.com</a>
                 </div>
             </div>
